--- a/hotel/hotel.csproj
+++ b/hotel/hotel.csproj
@@ -70,9 +70,12 @@
     <Content Include="Css\index.css" />
     <Content Include="Dashboard.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="src\Booking.aspx" />
+    <Content Include="src\Dashboard.aspx" />
     <Content Include="src\db.txt" />
     <Content Include="src\Room.aspx" />
     <Content Include="src\RoomType.aspx" />
+    <Content Include="src\User.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -99,6 +102,20 @@
     </Compile>
     <Compile Include="Model\Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Booking.aspx.cs">
+      <DependentUpon>Booking.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="src\Booking.aspx.designer.cs">
+      <DependentUpon>Booking.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="src\Dashboard.aspx.cs">
+      <DependentUpon>Dashboard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="src\Dashboard.aspx.designer.cs">
+      <DependentUpon>Dashboard.aspx</DependentUpon>
+    </Compile>
     <Compile Include="src\Room.aspx.cs">
       <DependentUpon>Room.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -112,6 +129,13 @@
     </Compile>
     <Compile Include="src\RoomType.aspx.designer.cs">
       <DependentUpon>RoomType.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="src\User.aspx.cs">
+      <DependentUpon>User.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="src\User.aspx.designer.cs">
+      <DependentUpon>User.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
