--- a/hotel/Web.config
+++ b/hotel/Web.config
@@ -14,7 +14,7 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
 	<authentication mode="Forms">
-		<forms name=".ASPXFORMSDEMO" loginUrl="Login.aspx" defaultUrl="Dashboard.aspx"
+		<forms name=".ASPXFORMSDEMO" loginUrl="~/Login.aspx" defaultUrl="~/src/Dashboard.aspx"
    protection="All" path="/" timeout="30">
 
 			<credentials passwordFormat="Clear">
